# fly-in

./: .gitignore  Makefile  README.md  output.txt  pyproject.toml  settings.json
assets/maps/CryEyeOfficial/: 01_Orobert_Spaghetti.txt  01_capacity_boundary.txt  02_connection_trap.txt  06_dijkstras_redemption.txt  Dijkstras_death.txt  Recursive_death.txt
assets/maps/challenger/: 01_the_impossible_dream.txt
assets/maps/errors/: ERR_01.txt  ERR_02.txt  ERR_03.txt  ERR_04.txt  ERR_05.txt  ERR_06.txt  ERR_07.txt  ERR_08.txt  ERR_09.txt  ERR_10.txt
assets/maps/hard/: 03_ultimate_challenge.txt
assets/maps/imported/: Priority_challenge.txt
docs/: README.md  specifications.md
sources/: __main__.py  config_parser.py  fly_in.py  main.py  map_objects.py  parser.py  settings.py  visualizer.py
sources/components/: buttons.py  gui_objects.py  map_objects.py  scales.py  view_objects.py  views.py  window.py
sources/components/algorithms/: a_star.py  a_star_backup.py
sources/components/game/: algorithm.py
sources/components/gui/: buttons.py  views.py  views_backup.py
sources/components/tools/: parser.py  scales.py  window.py
sources/game/: algorithm.py  map_objects.py
sources/gui/: buttons.py  views.py
sources/tools/: parser.py  scales.py  window.py
