[project]
name = "fly-in"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame",
    "pydantic",
    "moviepy",
    "pyvidplayer2"
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
]

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.pydantic-mypy]
init_typed = false